@@ -3,9 +3,19 @@ Changes
 MANIFEST
 lib/HTML/StateTable.pm
 lib/HTML/StateTable/Cell.pm
+lib/HTML/StateTable/Cell/Trait/Checkbox.pm
+lib/HTML/StateTable/Cell/Trait/Date.pm
+lib/HTML/StateTable/Cell/Trait/DateTime.pm
+lib/HTML/StateTable/Cell/Trait/Numeric.pm
+lib/HTML/StateTable/Cell/Trait/Tag.pm
+lib/HTML/StateTable/Cell/Trait/Time.pm
 lib/HTML/StateTable/Column.pm
 lib/HTML/StateTable/Column/Meta.pm
+lib/HTML/StateTable/Column/Trait/Filterable.pm
+lib/HTML/StateTable/Column/Trait/Searchable.pm
+lib/HTML/StateTable/Column/Trait/Title.pm
 lib/HTML/StateTable/Constants.pm
+lib/HTML/StateTable/Exception.pm
 lib/HTML/StateTable/Manager.pm
 lib/HTML/StateTable/Meta.pm
 lib/HTML/StateTable/Moo.pm
@@ -14,13 +24,34 @@ lib/HTML/StateTable/Renderer.pm
 lib/HTML/StateTable/Renderer/EmptyDiv.pm
 lib/HTML/StateTable/Result/Dummy.pm
 lib/HTML/StateTable/Result/Role.pm
+lib/HTML/StateTable/Role/Active.pm
+lib/HTML/StateTable/Role/Chartable.pm
+lib/HTML/StateTable/Role/CheckAll.pm
+lib/HTML/StateTable/Role/Configurable.pm
 lib/HTML/StateTable/Role/Downloadable.pm
+lib/HTML/StateTable/Role/Filterable.pm
+lib/HTML/StateTable/Role/ForceRowLimit.pm
+lib/HTML/StateTable/Role/Form.pm
+lib/HTML/StateTable/Role/HighlightRow.pm
+lib/HTML/StateTable/Role/Reorderable.pm
+lib/HTML/StateTable/Role/Searchable.pm
+lib/HTML/StateTable/Role/Tag.pm
 lib/HTML/StateTable/Row.pm
 lib/HTML/StateTable/Serialiser.pm
+lib/HTML/StateTable/Serialiser/Base.pm
+lib/HTML/StateTable/Serialiser/CSV.pm
+lib/HTML/StateTable/Serialiser/JSON.pm
 lib/HTML/StateTable/Types.pm
 lib/HTML/StateTable/Util.pm
-lib/HTML/StateTable/View/IteratorDownload.pm
-lib/HTML/StateTable/View/SerialiseTable.pm
+lib/HTML/StateTable/View/Download.pm
+lib/HTML/StateTable/View/Serialise.pm
+share/css/hstatetable-minimal.css
+share/js/hstatetable-0-util.js
+share/js/hstatetable-1-renderer.js
+share/js/hstatetable-2-role.js
+share/js/hstatetable-3-celltrait.js
+share/js/hstatetable-4-columntrait.js
+share/js/hstatetable-5-rowtrait.js
 t/02pod.t
 t/03podcoverage.t
 t/05kwalitee.t
