@@ -1,17 +1,21 @@
-requires "Catalyst" => "5.90128";
-requires "Class::Null" => "2.110730";
-requires "File::DataClass" => "v0.73.4";
-requires "HTML::Tree" => "5.07";
-requires "JSON" => "2.90";
-requires "Moo" => "2.001001";
+# This file is generated by Dist::Zilla::Plugin::CPANFile v6.030
+# Do not edit this file directly. To change prereqs, edit the `dist.ini` file.
+
+requires "HTML::Parser" => "3.72";
+requires "HTML::Tiny" => "1.08";
+requires "JSON::MaybeXS" => "1.004004";
+requires "Module::Runtime" => "0.016";
+requires "Moo" => "2.005005";
 requires "MooX::HandlesVia" => "0.001008";
-requires "Ref::Util" => "0.203";
+requires "Ref::Util" => "0.204";
 requires "Sub::Exporter" => "0.987";
-requires "Sub::Install" => "0.928";
-requires "Type::Tiny" => "1.000005";
+requires "Sub::Install" => "0.929";
+requires "Text::CSV_XS" => "1.49";
+requires "Try::Tiny" => "0.31";
+requires "Type::Tiny" => "2.002001";
 requires "Unexpected" => "v1.0.3";
-requires "namespace::autoclean" => "0.26";
-requires "namespace::clean" => "0.25";
+requires "namespace::autoclean" => "0.29";
+requires "namespace::clean" => "0.27";
 requires "perl" => "5.010001";
 requires "strictures" => "2.000000";
 
