@@ -1,20 +1,21 @@
 name = HTML-StateTable
 
 [Prereqs]
-Catalyst             = 5.90128
-File::DataClass      = v0.73.4
-HTML::Entities       = 3.69
+HTML::Parser         = 3.72
 HTML::Tiny           = 1.08
-JSON                 = 2.90
-Moo                  = 2.001001
+JSON::MaybeXS        = 1.004004
+Module::Runtime      = 0.016
+Moo                  = 2.005005
 MooX::HandlesVia     = 0.001008
-Ref::Util            = 0.203
+Ref::Util            = 0.204
 Sub::Exporter        = 0.987
-Sub::Install         = 0.928
-Type::Tiny           = 1.000005
+Sub::Install         = 0.929
+Text::CSV_XS         = 1.49
+Try::Tiny            = 0.31
+Type::Tiny           = 2.002001
 Unexpected           = v1.0.3
-namespace::autoclean = 0.26
-namespace::clean     = 0.25
+namespace::autoclean = 0.29
+namespace::clean     = 0.27
 perl                 = 5.010001
 strictures           = 2.000000
 
